--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 
                     <div class="form-group">
                         <label for="facebook">Facebook Page (optional)</label>
-                        <input type="url" id="facebook" name="facebook" placeholder="e.g. https://www.facebook.com/your-page">
+                        <input type="url" id="facebook" name="facebook" placeholder="e.g. https://www.facebook.com/jsquarephotography">
                     </div>
 
                     <div class="form-group">
                         <label for="instagram">Instagram Handle (optional)</label>
-                        <input type="text" id="instagram" name="instagram" placeholder="e.g. your_instagram_handle">
+                        <input type="text" id="instagram" name="instagram" placeholder="e.g. jsquarephotographysg">
                     </div>
 
                     <div class="form-group">
                         <label for="linkedin">LinkedIn Profile (optional)</label>
-                        <input type="url" id="linkedin" name="linkedin" placeholder="e.g. https://www.linkedin.com/in/your-profile">
+                        <input type="url" id="linkedin" name="linkedin" placeholder="e.g. https://sg.linkedin.com/company/j-square-photography">
                     </div>
 
                     <div class="form-group">
                         <label for="phone">Phone Number (optional)</label>
-                        <input type="tel" id="phone" name="phone" placeholder="e.g. 92236361">
+                        <input type="tel" id="phone" name="phone" placeholder="e.g. +65 9223 6361">
                     </div>
 
                     <div class="form-actions">
